--- a/mvp_selenium.ipynb
+++ b/mvp_selenium.ipynb
@@ -57,40 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fallo al aceptar las cookies\n"
-     ]
-    },
-    {
-     "ename": "NoSuchWindowException",
-     "evalue": "Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=129.0.6668.101)\nStacktrace:\n\tGetHandleVerifier [0x00007FF60166B095+29557]\n\t(No symbol) [0x00007FF6015DFA50]\n\t(No symbol) [0x00007FF60149B56A]\n\t(No symbol) [0x00007FF60146FCC5]\n\t(No symbol) [0x00007FF60151EE07]\n\t(No symbol) [0x00007FF601537E21]\n\t(No symbol) [0x00007FF601516F33]\n\t(No symbol) [0x00007FF6014E116F]\n\t(No symbol) [0x00007FF6014E22D1]\n\tGetHandleVerifier [0x00007FF60199C96D+3378253]\n\tGetHandleVerifier [0x00007FF6019E8497+3688311]\n\tGetHandleVerifier [0x00007FF6019DD1CB+3642539]\n\tGetHandleVerifier [0x00007FF60172A6B6+813462]\n\t(No symbol) [0x00007FF6015EAB5F]\n\t(No symbol) [0x00007FF6015E6B74]\n\t(No symbol) [0x00007FF6015E6D10]\n\t(No symbol) [0x00007FF6015D5C1F]\n\tBaseThreadInitThunk [0x00007FF8A4407374+20]\n\tRtlUserThreadStart [0x00007FF8A5E3CC91+33]\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNoSuchWindowException\u001b[0m                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m urls_ciudades \u001b[38;5;241m=\u001b[39m \u001b[43msup_sel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mobtener_urls_paginas_principales\u001b[49m\u001b[43m(\u001b[49m\u001b[43mciudades\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m urls_ciudades\u001b[38;5;241m.\u001b[39mto_csv(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdatos/urls/paginas/urls_paginas_principales.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\HACKIO_DATA\\BOOTCAMP\\PROYECTOS\\Proyecto3-Vacaciones\\codigo\\src\\support_selenium.py:111\u001b[0m, in \u001b[0;36mobtener_urls_paginas_principales\u001b[1;34m(ciudades)\u001b[0m\n\u001b[0;32m    107\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFallo al aceptar las cookies\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    109\u001b[0m sup_sel\u001b[38;5;241m.\u001b[39msleep_random_time()\n\u001b[1;32m--> 111\u001b[0m search_box \u001b[38;5;241m=\u001b[39m \u001b[43mdriver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfind_element\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcss selector\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m#lithium-root > main > div:nth-child(4) > div > div > div.ctKgY > div > form > div > div > input\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m    112\u001b[0m search_box\u001b[38;5;241m.\u001b[39mclick()\n\u001b[0;32m    113\u001b[0m sup_sel\u001b[38;5;241m.\u001b[39msleep_random_time()\n",
-      "File \u001b[1;32mc:\\Users\\JLFA\\anaconda3\\envs\\proyecto3\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:748\u001b[0m, in \u001b[0;36mWebDriver.find_element\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m    745\u001b[0m     by \u001b[38;5;241m=\u001b[39m By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR\n\u001b[0;32m    746\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m[name=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m--> 748\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFIND_ELEMENT\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43musing\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mby\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mvalue\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\JLFA\\anaconda3\\envs\\proyecto3\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:354\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    352\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    353\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 354\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    355\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    356\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
-      "File \u001b[1;32mc:\\Users\\JLFA\\anaconda3\\envs\\proyecto3\\Lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:229\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    227\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    228\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 229\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[1;31mNoSuchWindowException\u001b[0m: Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: chrome=129.0.6668.101)\nStacktrace:\n\tGetHandleVerifier [0x00007FF60166B095+29557]\n\t(No symbol) [0x00007FF6015DFA50]\n\t(No symbol) [0x00007FF60149B56A]\n\t(No symbol) [0x00007FF60146FCC5]\n\t(No symbol) [0x00007FF60151EE07]\n\t(No symbol) [0x00007FF601537E21]\n\t(No symbol) [0x00007FF601516F33]\n\t(No symbol) [0x00007FF6014E116F]\n\t(No symbol) [0x00007FF6014E22D1]\n\tGetHandleVerifier [0x00007FF60199C96D+3378253]\n\tGetHandleVerifier [0x00007FF6019E8497+3688311]\n\tGetHandleVerifier [0x00007FF6019DD1CB+3642539]\n\tGetHandleVerifier [0x00007FF60172A6B6+813462]\n\t(No symbol) [0x00007FF6015EAB5F]\n\t(No symbol) [0x00007FF6015E6B74]\n\t(No symbol) [0x00007FF6015E6D10]\n\t(No symbol) [0x00007FF6015D5C1F]\n\tBaseThreadInitThunk [0x00007FF8A4407374+20]\n\tRtlUserThreadStart [0x00007FF8A5E3CC91+33]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "urls_ciudades = sup_sel.obtener_urls_paginas_principales(ciudades)\n",
-    "urls_ciudades.to_csv('datos/urls/paginas/urls_paginas_principales.csv')"
+    "# urls_ciudades = sup_sel.obtener_urls_paginas_principales(ciudades)\n",
+    "# urls_ciudades.to_csv('datos/urls/paginas/urls_paginas_principales.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +125,7 @@
        "1  Barcelona  https://www.tripadvisor.es/Attractions-g187497..."
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,23 +136,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'https://www.tripadvisor.es/Attractions-g187147-Activities-Paris_Ile_de_France.html'"
+       "array(['https://www.tripadvisor.es/Attractions-g187147-Activities-Paris_Ile_de_France.html',\n",
+       "       'https://www.tripadvisor.es/Attractions-g187497-Activities-Barcelona_Catalonia.html'],\n",
+       "      dtype=object)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "urls = df_urls_ciudades['urls'].values\n",
-    "urls[0]"
+    "urls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urls_contenidos = sup_sel.obtener_html_de_urls(urls)"
    ]
   },
   {
@@ -184,20 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = urls[0]\n",
-    "\n",
-    "headers = {\n",
-    "        # Decirle al server lenguaje español\n",
-    "        'accept-language': 'es', \n",
-    "        # Simulamos que somos el navegador Chrome\n",
-    "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/95.0.4638.69 Safari/537.36'\n",
-    "    }\n",
-    "\n",
-    "respuesta = requests.get('https://www.tripadvisor.es', headers=headers)\n",
-    "\n",
-    "sopa = {}\n",
-    "if respuesta.status_code == 200:\n",
-    "    sopa = BeautifulSoup(respuesta.content, 'html.parser')"
+    "df_urls_ciudades = df_urls_ciudades.merge(urls_contenidos, how='right')"
    ]
   },
   {
@@ -207,8 +182,55 @@
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ciudades</th>\n",
+       "      <th>urls</th>\n",
+       "      <th>html</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Paris</td>\n",
+       "      <td>https://www.tripadvisor.es/Attractions-g187147...</td>\n",
+       "      <td>[html, [[&lt;link href=\"https://static.tacdn.com/...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>https://www.tripadvisor.es/Attractions-g187497...</td>\n",
+       "      <td>[html, [[&lt;link href=\"https://static.tacdn.com/...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "403"
+       "    ciudades                                               urls  \\\n",
+       "0      Paris  https://www.tripadvisor.es/Attractions-g187147...   \n",
+       "1  Barcelona  https://www.tripadvisor.es/Attractions-g187497...   \n",
+       "\n",
+       "                                                html  \n",
+       "0  [html, [[<link href=\"https://static.tacdn.com/...  \n",
+       "1  [html, [[<link href=\"https://static.tacdn.com/...  "
       ]
      },
      "execution_count": 8,
@@ -217,7 +239,107 @@
     }
    ],
    "source": [
-    "respuesta.status_code"
+    "df_urls_ciudades"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df_urls_ciudades.to_csv(\"datos/urls/paginas/df_cius_urls_html.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_urls_ciudades = pd.read_csv(\"datos/urls/paginas/df_cius_urls_html.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ciudades</th>\n",
+       "      <th>html</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Paris</td>\n",
+       "      <td>&lt;!DOCTYPE html&gt;\\n&lt;html lang=\"es-ES\"&gt;&lt;head&gt;&lt;lin...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>&lt;!DOCTYPE html&gt;\\n&lt;html lang=\"es-ES\"&gt;&lt;head&gt;&lt;lin...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    ciudades                                               html\n",
+       "0      Paris  <!DOCTYPE html>\\n<html lang=\"es-ES\"><head><lin...\n",
+       "1  Barcelona  <!DOCTYPE html>\\n<html lang=\"es-ES\"><head><lin..."
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_guardar = df_urls_ciudades[['ciudades', 'html']]\n",
+    "df_guardar"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### guardar htmls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for index, row in df_guardar.iterrows():\n",
+    "#     ciudad = row['ciudades']\n",
+    "#     html = BeautifulSoup(row['html'], 'html.parser')\n",
+    "\n",
+    "#     with open(f\"datos/html/actividades_{ciudad}.html\", \"w\", encoding=\"utf-8\") as file:\n",
+    "#         file.write(str(html))"
    ]
   }
  ],
